komposefiles/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mlops-covertype-common-network: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: IP_SERVER
              value: db
            - name: NAME_DB
              value: db_z
            - name: PASS_DB
              value: db_train
            - name: USER_DB
              value: root
          image: yemoncad/mlops_covertype-app:appt4
          name: app
          ports:
            - containerPort: 8506
          resources: {}
          volumeMounts:
            - mountPath: /database/data
              name: train-data
            - mountPath: /train/models
              name: model
      restartPolicy: Always
      volumes:
        - name: train-data
          persistentVolumeClaim:
            claimName: train-data
        - name: model
          persistentVolumeClaim:
            claimName: model
status: {}
