komposefiles/inference-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: inference
  name: inference
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: inference
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mlops-covertype-common-network: "true"
        io.kompose.service: inference
    spec:
      containers:
        - env:
            - name: IP_SERVER
              value: db
            - name: NAME_DB
              value: db_z
            - name: PASS_DB
              value: db_train
            - name: USER_DB
              value: root
          image: yemoncad/mlops_covertype-inference:inferencet1
          name: inference
          ports:
            - containerPort: 8504
          resources: {}
          volumeMounts:
            - mountPath: /train/models
              name: model
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/estudiante/mlops_covertype
          name: model
status: {}
