komposefiles/train-model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: train-model
  name: train-model
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: train-model
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/mlops-covertype-common-network: "true"
        io.kompose.service: train-model
    spec:
      containers:
        - env:
            - name: IP_SERVER
              value: db
            - name: NAME_DB
              value: db_X
            - name: PASS_DB
              value: db_train
            - name: USER_DB
              value: root
          image: yemoncad/mlops_covertype-train_model:traint1
          name: train-model
          ports:
            - containerPort: 8503
          resources: {}
          volumeMounts:
            - mountPath: /train/models
              name: model
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/estudiante/mlops_covertype
          name: model
status: {}
