komposefiles/inference-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: inference
  name: inference
spec:
  ports:
    - name: "8504"
      port: 8504
      targetPort: 8504
  selector:
    io.kompose.service: inference
status:
  loadBalancer: {}
