komposefiles/load-database-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: load-database
  name: load-database
spec:
  ports:
    - name: "8502"
      port: 8502
      targetPort: 8502
  selector:
    io.kompose.service: load-database
status:
  loadBalancer: {}
