komposefiles/logging-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: logging
  name: logging
spec:
  ports:
    - name: "8505"
      port: 8505
      targetPort: 8505
  selector:
    io.kompose.service: logging
status:
  loadBalancer: {}
