komposefiles/train-model-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml -o komposefiles/ --volumes hostPath
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: train-model
  name: train-model
spec:
  ports:
    - name: "8503"
      port: 8503
      targetPort: 8503
  selector:
    io.kompose.service: train-model
status:
  loadBalancer: {}
