komposefiles/db-train-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: db-train
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/db-train: "true"
  podSelector:
    matchLabels:
      io.kompose.network/db-train: "true"
